tests/invalid/try_io_else.m
%-----------------------------------------------------------------------------%

:- module try_io_else.
:- interface.

:- import_module io.

:- pred main(io::di, io::uo) is det.

%-----------------------------------------------------------------------------%
%-----------------------------------------------------------------------------%

:- implementation.

:- import_module exception.

%-----------------------------------------------------------------------------%

main(!IO) :-
    (try [io(!IO)]
        true
    then
        true
    else    % not allowed
        true
    ).

%-----------------------------------------------------------------------------%
% vim: ft=mercury ts=8 sts=4 sw=4 et
